--- a/styles/molecules/button-group.css
+++ b/styles/molecules/button-group.css
@@ -1,17 +1,17 @@
-@layer components {
-    .button-group {
-        @apply flex gap-4 sm:gap-2 flex-wrap;
-    }
+@utility button-group {
+    @apply flex gap-4 sm:gap-2 flex-wrap;
+}
 
-    .button-group-vertical {
-        @apply flex flex-col gap-4 sm:gap-2;
-    }
+@utility button-group-vertical {
+    @apply flex flex-col gap-4 sm:gap-2;
+}
 
-    .button-icon {
-        @apply btn-circle min-h-[44px] min-w-[44px];
-        @apply transition-all duration-300;
-    }
+@utility button-icon {
+    @apply btn-circle min-h-[44px] min-w-[44px];
+    @apply transition-all duration-300;
+}
 
+@layer utilities {
     .button-icon:hover {
         @apply -translate-y-0.5 shadow-lg;
     }
