--- a/styles/components/challenge/challenge.css
+++ b/styles/components/challenge/challenge.css
@@ -1,9 +1,9 @@
 .challenge {
-    @apply flex flex-col w-full gap-4;
+    @apply flex flex-col w-full gap-adaptive;
 }
 
 .challenge__header {
-    @apply flex-between gap-4 mb-6;
+    @apply flex-between gap-adaptive mb-6 sm:mb-4;
 }
 
 .challenge__header .challenge-info {
@@ -11,5 +11,5 @@
 }
 
 .challenge__header .challenge-timer {
-    @apply flex-shrink-0 min-w-[120px];
+    @apply flex-shrink-0 min-w-[120px] sm:min-w-[100px];
 }
