--- a/styles/components/challenge/multiple_choice_circle.css
+++ b/styles/components/challenge/multiple_choice_circle.css
@@ -1,6 +1,6 @@
 .multiple-choice-circle {
-    @apply flex flex-col gap-8 items-stretch;
-    @apply max-w-[800px] min-w-[400px] w-fit mx-auto p-8;
+    @apply challenge-layout-content;
+    @apply max-w-[800px] min-w-[400px] w-fit;
 }
 
 .multiple-choice-circle .progress {
@@ -8,17 +8,16 @@
 }
 
 .multiple-choice-circle__content {
-    @apply relative min-h-[400px];
-    @apply flex justify-center items-center;
+    @apply relative min-h-[400px] sm:min-h-[300px];
+    @apply flex-center;
 }
 
 .multiple-choice-circle .question {
-    @apply absolute z-10 w-fit max-w-[90%];
+    @apply absolute z-10 w-fit max-w-[90%] sm:w-[250px];
 }
 
 .multiple-choice-circle .multiple-choice-options {
-    @apply absolute inset-0;
-    @apply flex justify-center items-center;
+    @apply absolute inset-0 flex-center;
 }
 
 .multiple-choice-circle .multiple-choice-option {
@@ -27,7 +26,7 @@
     transform-origin: center;
 }
 
-/* Position options in a circle */
+/* Position options in a circle - Desktop */
 .multiple-choice-circle .multiple-choice-option:nth-child(1) {
     @apply left-1/2 top-1/2;
     transform: translate(-50%, -50%) rotate(0deg) translateX(180px) rotate(0deg);
@@ -75,19 +74,13 @@
         rotate(-315deg);
 }
 
+.multiple-choice-circle .multiple-choice-option span {
+    @apply challenge-option-card;
+    @apply min-w-[70px] min-h-[70px];
+}
+
+/* Mobile adjustments */
 @screen sm {
-    .multiple-choice-circle {
-        @apply p-4;
-    }
-
-    .multiple-choice-circle__content {
-        @apply min-h-[300px];
-    }
-
-    .multiple-choice-circle .question {
-        @apply w-[250px];
-    }
-
     .multiple-choice-circle .multiple-choice-option span {
         @apply min-w-[50px] min-h-[50px] max-w-[100px];
         @apply text-sm p-1 px-2;
